--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
   
-    <h2></h2>
+    <h2>0</h2>
     
   </body>
 </html>
